# object_detection

./: .gitignore  README.md  package.xml  requirements.txt  setup.py
object_detection/: object_detection.py  object_detection_node.py  yolo_detector.py
object_detection/intrinsics/: chain_b0179.yaml  intrinsics_720.yaml
