<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>1.0.0</version>
  <description>ROS2 Real-time Object Detection</description>
  <maintainer email="danxie2001@gmail.com">Daniel Xie</maintainer>
  <license>MIT</license>
  <author>Daniel Xie</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
 
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>